# german-legal_chatapp

./: main.py  pyproject.toml
data/processed/: aufenthg_2004_chunk_0.txt  aufenthg_2004_chunk_1.txt  aufenthg_2004_chunk_2.txt  bgb_chunk_0.txt  bgb_chunk_1.txt  bgb_chunk_10.txt  bgb_chunk_11.txt  bgb_chunk_12.txt  bgb_chunk_13.txt  bgb_chunk_14.txt  bgb_chunk_15.txt  bgb_chunk_16.txt  bgb_chunk_17.txt  bgb_chunk_18.txt  bgb_chunk_19.txt  bgb_chunk_2.txt  bgb_chunk_20.txt  bgb_chunk_21.txt  bgb_chunk_22.txt  bgb_chunk_23.txt  bgb_chunk_24.txt  bgb_chunk_25.txt  bgb_chunk_26.txt  bgb_chunk_27.txt  bgb_chunk_28.txt  bgb_chunk_29.txt  bgb_chunk_3.txt  bgb_chunk_30.txt  bgb_chunk_4.txt  bgb_chunk_5.txt  bgb_chunk_6.txt  bgb_chunk_7.txt  bgb_chunk_8.txt  bgb_chunk_9.txt  gg_chunk_0.txt  gg_chunk_1.txt  sgb_4_chunk_0.txt  sgb_4_chunk_1.txt  sgb_4_chunk_2.txt  sgb_4_chunk_3.txt  (+7 more)
data/raw/: aufenthg_2004.txt  bgb.txt  gg.txt  sgb_4.txt  stgb.txt
scripts/: migrate_to_qdrant.py  preprocess_data.py  scrape_laws.py  store_embeddings.py  test_db.py  test_query.py
