[project]
name = "german-legal-chatpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.22"
dependencies = [
    "streamlit==1.38.0",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "sentence-transformers==3.1.1",
    "transformers==4.44.2",
    "torch==2.4.1",
    "psycopg2-binary==2.9.9",
    "pgvector==0.2.5",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "pandas==2.2.2",
]
